<resources>
    <string name="app_name">Covid 19 Tracker</string>
    <string name="main_tab_world">World</string>
    <string name="main_tab_countries">Countries</string>
    <string name="confirmed">Total Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="title_activity_country_detail">CountryDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sample_country">India</string>

    <string name="heading">Coronavirus Covid 19</string>
    <string name="heading2">Global Cases</string>

</resources>