<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey900">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="@color/grey50"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/heading2"
        android:textColor="@color/grey50"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:theme="@style/labelText" />

            <TextView
                android:id="@+id/confirmedTodayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/redA700"
                android:theme="@style/keyText" />

            <TextView
                android:id="@+id/confirmedTotalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red700"
                android:theme="@style/keyText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:theme="@style/labelText" />

            <TextView
                android:id="@+id/activeTodayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purpleA700"
                android:textSize="20sp"
                android:theme="@style/keyText" />

            <TextView
                android:id="@+id/activeTotalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple900"
                android:theme="@style/keyText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:theme="@style/labelText" />

            <TextView
                android:id="@+id/recoveredTodayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/greenA700"
                android:textSize="20sp"
                android:theme="@style/keyText" />

            <TextView
                android:id="@+id/recoveredTotalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green900"
                android:theme="@style/keyText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deceased"
                android:textColor="@color/grey300"
                android:theme="@style/labelText" />

            <TextView
                android:id="@+id/deceasedTodayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey300"
                android:textSize="20sp"
                android:theme="@style/keyText" />

            <TextView
                android:id="@+id/deceasedTotalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey500"
                android:theme="@style/keyText" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
